--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ textarea {
 }
 
 button {
-    margin: 10px;
+    margin: auto;
     padding: 10px 20px;
     font-size: 16px;
     cursor: pointer;
