--- a/style.css
+++ b/style.css
@@ -27,8 +27,8 @@ body {
 }
 
 textarea {
-    width: 90%;
-    height: 200px;
+    width: auto;
+    height: auto;
     padding: 10px;
     font-size: 16px;
     border: 1px solid #ccc;
